fixes milestone 4 problems with stretching

--- a/milestone4/style.css
+++ b/milestone4/style.css
@@ -20,7 +20,9 @@ header {
     height: 90px;
     display: flex;
     box-shadow: 0px 2px 10px 2px #444444;
-    z-index:2
+    z-index:2;
+    align-items:center;
+    justify-content:space-between;
 }
 
 #home-image {
@@ -28,7 +30,7 @@ header {
     grid-column: 1/-1;
     height: 380px;
     background:url(imagesformile/index-background.png) no-repeat;
-    background-size: 1600px 380px;
+    background-size: cover;
     z-index:1;
     border-bottom:1px solid black
 }
@@ -40,7 +42,6 @@ header {
 }
 
 #first-article {
-    
     grid-row: 4/5;
     grid-column: 1/-1;
     height: 600px;
@@ -52,14 +53,12 @@ header {
 
 #subs {
     grid-row: 5/6;
-    grid-column: 1/-1;
+    grid-column: 2/-2;
     height: 400px;
-    display:grid;
-    grid-template-columns:1fr repeat(3, 190px) 1fr;
-    grid-template-rows:80px 1fr;
-    justify-items:center;
+    display:flex;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    
+    align-items:center;
+    flex-direction:column;
 }
 
 footer {
@@ -69,26 +68,25 @@ footer {
     height: 90px;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     display:flex;
+    align-items:center;
+    justify-content:space-between;
 }
 
 header h1 {
     font-size: 45px;
-    padding-left: 20px;
-    margin-top: 15px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    margin-left:15px
 }
 
 .logo {
     width: 90px;
     height: 80px;
-    padding-left: 20px;
-    padding-top: 5px;
+    padding-top:17px;
+    padding-left:15px
 }
-
-.flex-items {
-    display: flex;
+.logotitle{
+    display:flex;
 }
-
 #menubutton {
     background: url(imagesformile/menuicon.png) no-repeat;
     background-size: contain;
@@ -96,8 +94,7 @@ header h1 {
     height: 60px;
     border: none;
     cursor: pointer;
-    margin-left: 400px;
-    margin-top: 15px
+    margin-right:15px;
 }
 
 #downloadbutton {
@@ -107,8 +104,6 @@ header h1 {
     height: 50px;
     border: none;
     cursor: pointer;
-    margin-left: 400px;
-    margin-top: 17px
 }
 #first-features{
     grid-column:2/3;
@@ -152,63 +147,83 @@ body{
     margin:0px;
 }
 #subs h2{
-    text-align:center;
-    grid-row:1/2;
-    grid-column:1/-1;
-    height:36px;
     font-size:30px
 }
-#subs div{
-    height:127px;
-    width:104px;
+.subscription-boxes{
     background-color:rgb(215, 215, 215);
-    font-size: 40px;
+    border-radius: 20px;
+    border:5px solid #008854;
 }
-.sub1{
-    grid-column:2/3;
-    grid-row:2/3;
-    align-content:center;
+.subscriptions{
+    display:flex;
+    align-items:center;
+    justify-content: space-between;
     text-align:center;
     font-weight:bold;
+    width:100%;
+    font-size:20px;
 }
-.sub2{
-    grid-column:3/4;
-    grid-row:2/3;
-    align-content:center;
-    text-align:center;
-    font-weight:bold;
+.smaller-text{
+    font-size:10px
 }
-.sub3{
-    grid-column:4/5;
-    grid-row:2/3;
-    align-content:center;
-    text-align:center;
+#first-sub-box, #second-sub-box{
+    padding-top:55px;
+    padding-bottom:55px
+}
+#first-sub-box{
+    padding-left:26.5px;
+    padding-right:26.5px
+}
+#second-sub-box{
+    padding-left:20px;
+    padding-right:20px
+}
+#third-sub-box{
+    padding-left:36px;
+    padding-right:36px
+}
+#blue-box{
+    background-color:#0B77D6;
+    border-radius:20px;
+    color:white
+}
+.cost-amounts{
+    font-size:25px;
+    background-color:#ffa700;
+    border-radius:20px;
     font-weight:bold;
+    border:none;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    padding-left:30px;
+    padding-right:30px;
+    cursor:pointer;
+}
+#yearly-cost{
+    margin-bottom:8px
 }
 footer button{
     height:60px;
     width:60px;
-    margin-top:15px;
-    margin-bottom:15px;
     border:none;
     cursor: pointer;
 }
 #insta{
     background:url(imagesformile/insta-logo.png) no-repeat;
-    background-size:cover;
-    margin-left:20px;
+    background-size:cover;;
 }
 #facebook{
     background:url(imagesformile/facebook-logo.png) no-repeat;
     background-size:cover;
-    margin-left:10px;
+    padding-left:10px;
 }
 #twitter{
     background:url(imagesformile/x-logo.png) no-repeat;
     background-size:cover;
-    margin-left:10px;
+    padding-left:10px;
+}
+#socials{
+    margin-left:15px;
 }
 footer p{
-    align-content:center;
-    margin-left:980px
+    margin-right:15px;
 }
